--- a/app/elements/tpa-money-transfer/component.css
+++ b/app/elements/tpa-money-transfer/component.css
@@ -12,10 +12,7 @@
 }
 :host {
   display: block;
-  --brand-primary-color: #ff6600;
-  --brand-secondary-color: #636363;
-  --brand-light-color: #818181;
-  --brand-dark-color: #404040;
+  --iron-icon-fill-color: var(--primary-color);
   -moz-user-select: none;
   /* Firefox */
   -ms-user-select: none;
@@ -43,20 +40,21 @@ section {
   @apply (--layout-flex-0);
 }
 .my-card > div:nth-child(1) > h1 {
-  color: var(--brand-light-color);
   font-size: 1em;
   margin: 0;
   font-weight: normal;
 }
 .my-card > div:nth-child(1) > div {
-  color: var(--brand-dark-color);
   font-size: 1.2em;
 }
 .my-card.balance > div:nth-child(1) > div {
-  color: var(--brand-primary-color);
+  color: var(--primary-color);
 }
 .my-card.balance super {
   font-size: 0.6em;
+}
+paper-input {
+  color: var(--light-primary-color);
 }
 paper-input div[prefix] {
   padding-right: 5px;
@@ -71,8 +69,30 @@ paper-input div[prefix] {
   margin-bottom: 0.5em;
 }
 .color--brand-primary {
-  color: var(--brand-primary-color);
+  color: var(--primary-color);
 }
 .color--light-primary {
-  color: var(--brand-light-color);
+  color: var(--light-primary-color);
+}
+paper-button[primary] {
+  color: var(--primary-background-color);
+  background: var(--primary-color);
+}
+simple-dialog {
+  width: 80%;
+}
+.addressContent {
+  @apply (--layout);
+  width: 200px;
+  margin: 8px;
+}
+@media (max-width: 800px) {
+  .addressContainer {
+    width: calc(34%);
+  }
+}
+@media (max-width: 400px) {
+  .addressContainer {
+    width: 100%;
+  }
 }
